welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:34: error: not enough arguments for method setPos: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
      setPos(diag-getMondeHauteur()+1)
            ^